test/libsolidity/syntaxTests/license/license_unicode.sol
// SPDX-License-Identifier: ⡉⡊⡋⡌⡍⡎⡏⡐⡑⡒
contract C {}
// ----
// ParserError 1114: Invalid SPDX license identifier.
